# Sarah

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  vite.config.ts
.cargo/: config.toml
docs/: backend-architecture.md
mcp/spotify-mcp-server/: package-lock.json  package.json  tool-runner.js
src/: App.tsx  index.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_conversations.sql  0003_mcp_system.sql  0004_memory_system.sql  0005_rag_system.sql  0006_analytics.sql  0007_runtime_intelligence.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  native_capture.rs  state.rs
src-tauri/src/commands/: analytics_commands.rs  chat_commands.rs  integration_commands.rs  local_commands.rs  mcp_commands.rs  memory_commands.rs  mod.rs  model_commands.rs  rag_commands.rs  runtime_commands.rs  settings_commands.rs  system_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/repositories/: analytics_repo.rs  conversation_repo.rs  document_repo.rs  embedding_repo.rs  mcp_repo.rs  memory_repo.rs  mod.rs  model_repo.rs  settings_repo.rs  system_repo.rs  user_repo.rs
src-tauri/src/services/: adaptive_memory_manager.rs  analytics_service.rs  background_service.rs  context_service.rs  conversation_service.rs  crypto_service.rs  embedding_service.rs  hardware_service.rs  inference_service.rs  intent_service.rs  mcp_service.rs  memory_service.rs  mod.rs  model_manager_service.rs  predictive_preloader.rs  rag_service.rs  recommendation_service.rs  reranker_service.rs  runtime_governor_service.rs  runtime_orchestrator_service.rs  setup_orchestrator_service.rs  smart_query_classifier.rs  task_router_service.rs  usage_learner.rs
src-tauri/tests/: repository_smoke.rs
src/components/: AssistantInput.tsx  ConsoleDrawer.tsx  ConversationFeed.tsx  HistoryWindow.tsx  MainOverlayApp.tsx  McpMarketplaceWindow.tsx  ModelsWindow.tsx  Orb.tsx  ScreenRecordingHud.tsx  SettingsWindow.tsx  SetupWindow.tsx  SpotifyAudioPlayer.tsx  StatusText.tsx
src/hooks/: useAppPreferences.ts  useAssistantState.ts  useAssistantState.tsx  useSession.ts  (+4 more)
(+6 files in other folders)
