[package]
name = "sarah"
version = "0.2.0"
description = "Local AI desktop backend"
authors = ["Sarah AI Team"]
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "sarah_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["nvidia"]
mcp = []
nvidia = ["dep:nvml-wrapper"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-global-shortcut = "2.3.0"

windows-capture = "1.5.0"

# Async runtime and observability
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "fs"] }
tokio-stream = "0.1.17"
tokio-util = "0.7"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }

# Serialization and errors
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.12"
anyhow = "1.0.98"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }

# Core types
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
once_cell = "1.21.3"
base64 = "0.22.1"
encoding_rs = "0.8.35"

# Database
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json"
] }



# AI and ML
llama-cpp-2 = "0.1"
fastembed = "5"
ort = { version = "2.0.0-rc.11", features = ["cuda", "directml"] }

# Hardware detection
sysinfo = "0.37.0"
nvml-wrapper = { version = "0.11", optional = true }

# Security
aes-gcm = "0.10.3"
keyring = "3.6.3"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

# Performance and caching
moka = { version = "0.12.10", features = ["future"] }
dashmap = "6.1.0"
flume = "0.11.1"

# File and parsing
mime_guess = "2.0.5"
pdf-extract = "0.10.0"
calamine = "0.30.1"

# Existing local utilities kept for feature parity
rfd = "0.15.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
